--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>登录</title>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}"/>
-    <script type="text/javascript" th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
+    <link rel="stylesheet" href="../static/css/bootstrap.css"/>
+    <script type="text/javascript" src="../static/js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="../static/js/bootstrap.bundle.js"></script>
 </head>
 
 <body style="background-color: lightseagreen">
@@ -22,7 +22,7 @@
                             <div class="input-group-prepend">
                                 <div class="input-group-text">U</div>
                             </div>
-                            <input type="text" class="form-control" th:field="*{username}" placeholder="用户名">
+                            <input type="text" class="form-control" th:field="*{username}" placeholder="Username">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -30,7 +30,7 @@
                             <div class="input-group-prepend">
                                 <div class="input-group-text">P</div>
                             </div>
-                            <input type="password" class="form-control" th:field="*{password}" placeholder="密码">
+                            <input type="password" class="form-control" th:field="*{password}" placeholder="Password">
                         </div>
                     </div>
                     <div class="form-group row float-right">
