--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>注册</title>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}"/>
-    <script type="text/javascript" th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
+    <link rel="stylesheet" href="../static/css/bootstrap.css"/>
+    <script type="text/javascript" src="../static/js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="../static/js/bootstrap.bundle.js"></script>
 </head>
 
 <body style="background-color: lightseagreen">
