添加回收站功能

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -5,5 +5,11 @@
 .btn:active.focus,
 .btn.active.focus {
     box-shadow: none
-}.
+}
 
+.col-center {
+    float: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
