--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -363,17 +363,38 @@
             </div>
         </div>
 
-        <!-- Right Shared Files -->
         <div class="col-3">
-            <div class="accordion" id="shareFileListAccordion">
-                <div class="card">
+            <!-- Shared Files -->
+            <div class="accordion" id="shareFileListAccordion" th:fragment="share_refresh">
+                <div class="card" style="border-bottom: none">
                     <div class="card-header" style="padding-top: 6px; padding-bottom: 6px">
                         <div class="container" style="padding-left: 0;padding-right: 0">
                             <div class="row">
-                                <div class="col-6">
-                                    <p class="font-weight-bold" style="margin: 5px 0;">热门分享文件</p>
+                                <div class="col-4">
+                                    <p class="font-weight-bold" style="margin: 5px 0;">热门分享</p>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-8">
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-7" style="padding-left: 0; padding-right: 0">
+                                                <form id="searchSharedForm" th:action="@{/file/search}" th:method="get" onsubmit="return false">
+                                                    <input style="display: none;" name="isSearchShared" value="true" type="text">
+                                                    <input class="form-control" id="searchSharedInput" name="query"
+                                                           style="font-size: 11px; padding: 0;" type="text">
+                                                </form>
+                                            </div>
+                                            <div class="col-5" style="padding-left: 0; padding-right: 0;">
+                                                <div class="btn-toolbar" role="toolbar" aria-label="function" style="float: right">
+                                                    <div class="btn-group" role="group">
+                                                        <button id="searchSharedButton" type="button" class="btn btn-outline-primary btn-sm"
+                                                                style="font-size: 14px">
+                                                            搜索
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -399,7 +420,7 @@
                                 <li class="list-group-item">文件大小:
                                     <a class="float-right" th:text="${#numbers.formatDecimal(sharedFile.getFileSize(), 1, 2)} + ' MB'"></a>
                                 </li>
-                                <li class="list-group-item">是否加密:<a class="float-right" th:text="${sharedFile.isShareEncrypt()}"></a> </li>
+                                <li class="list-group-item">是否加密:<a class="float-right" th:text="${sharedFile.isShareEncrypt() == true ? '是' : '否'}"></a> </li>
                                 <li class="list-group-item">下载次数:<a class="float-right" th:text="${sharedFile.getDownloadCount()}"></a></li>
                                 <li class="list-group-item">
                                     <div class="btn-toolbar" role="toolbar" style="float: left" aria-label="function">
@@ -449,7 +470,8 @@
                 </div>
             </div>
 
-            <div class="accordion" id="deletedFileListAccordion" style="margin-top: 20px;">
+            <!-- Deleted files -->
+            <div class="accordion" id="deletedFileListAccordion" th:fragment="delete_refresh" style="margin-top: 20px;">
                 <div class="card">
                     <div class="card-header" style="padding-top: 6px; padding-bottom: 6px">
                         <div class="container" style="padding-left: 0;padding-right: 0">
@@ -476,13 +498,13 @@
                     <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title">清空回收站</h5>
+                                <h5 class="modal-title">你确定清空回收站吗?</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <form class="form-inline" th:action="@{/file/emptyTrash}" th:method="post">
+                                <form class="form-inline" th:action="@{/file/emptyTrash}" th:method="get" onsubmit="return false">
                                     <div class="container">
                                         <div class="row">
                                             <div class="col-6">
@@ -546,7 +568,7 @@
                                                     </button>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <form class="form-inline" th:action="@{/file/restore}" th:method="post">
+                                                    <form class="form-inline" th:action="@{/file/restore}" th:method="post" onsubmit="return false">
                                                         <div class="container">
                                                             <div class="row">
                                                                 <div class="col-6">
@@ -571,13 +593,13 @@
                                         <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
                                             <div class="modal-content">
                                                 <div class="modal-header">
-                                                    <h5 class="modal-title">永久删除</h5>
+                                                    <h5 class="modal-title">你确定永久删除吗?</h5>
                                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                         <span aria-hidden="true">&times;</span>
                                                     </button>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <form class="form-inline" th:action="@{/file/realDelete}" th:method="post">
+                                                    <form class="form-inline" th:action="@{/file/realDelete}" th:method="post" onsubmit="return false">
                                                         <div class="container">
                                                             <div class="row">
                                                                 <div class="col-6">
