还有一些小BUG

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,8 +4,10 @@
 <head>
     <title>登录</title>
     <link rel="stylesheet" href="../static/css/bootstrap.css"/>
+    <link rel="stylesheet" href="../static/css/toastr.css">
     <script type="text/javascript" src="../static/js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="../static/js/bootstrap.bundle.js"></script>
+    <script type="text/javascript" src="../static/js/toastr.min.js"></script>
 </head>
 
 <body style="background-color: lightseagreen">
@@ -36,7 +38,7 @@
                     <div class="form-group row float-right">
                         <div class="form-inline" style="padding-right: 16px">
                             <a class="btn-link" style="margin-right: 16px;" th:href="@{/user/register}">注册</a>
-                            <button type="submit" class="btn btn-primary">登录</button>
+                            <button type="submit" class="btn btn-outline-primary">登录</button>
                         </div>
                     </div>
                 </form>
