--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,8 +4,11 @@
 <head>
     <title>注册</title>
     <link rel="stylesheet" href="../static/css/bootstrap.css"/>
+    <link rel="stylesheet" href="../static/css/bootstrap.css"/>
+    <link rel="stylesheet" href="../static/css/toastr.css">
     <script type="text/javascript" src="../static/js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="../static/js/bootstrap.bundle.js"></script>
+    <script type="text/javascript" src="../static/js/toastr.min.js"></script>
 </head>
 
 <body style="background-color: lightseagreen">
@@ -44,7 +47,7 @@
                 <div class="form-group row float-right">
                     <div class="form-inline" style="padding-right: 16px">
                         <a class="btn-link" style="margin-right: 16px;" th:href="@{/user/login}">登录</a>
-                        <button type="submit" class="btn btn-primary">注册</button>
+                        <button type="submit" class="btn btn-outline-primary">注册</button>
                     </div>
                 </div>
             </form>
